--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -163,7 +163,7 @@ jobs:
       
       - name: Update Kubernetes deployment file
         env:
-          IMAGE_TAG: sha-${{ github.sha }}
+          IMAGE_TAG: ${{ github.sha }}
           GITHUB_REPOSITORY: dulithkavinda/devsecops-pipeline-counterapp
           REGISTRY: ghcr.io
         run: |
