--- a/kubernetes/ingress.yaml
+++ b/kubernetes/ingress.yaml
@@ -1,19 +1,1 @@
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: count-app-ingress
-  annotations:
-    kubernetes.io/ingress.class: nginx
-
-spec:
-  rules:
-  - host: count-app.example.com  # Replace with your actual domain
-    http:
-      paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: count-app
-            port:
-              number: 80
+aasd
