--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.2",
-    "vitest": "^1.6.1"
+    "vitest": "^1.6.1",
+    "jsdom": "^22.0.0"
   }
 }
